--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
-language: python
-
-python:
-  - '2.7'
-  - '3.4'
-
-before_install:
-  - pip install pytest-cov
-  - cd python
-  - ls
-  - ls
+language: node_js
 
 script:
-  - py.test -v --cov=maths
+  - yarn
+  - yarn cypress install
+  - yarn cypress verify
+  - percy exec -- cypress run --spec "cypress/integration/project/percy.spec.js"
