--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/highburylengend/learnCypress#readme",
   "dependencies": {
-    "cypress": "^6.4.0",
-    "cypress-xpath": "^1.6.1"
+    "cypress": "^8.3.0",
+    "cypress-xpath": "^1.6.1",
+    "@percy/cli": "^1.0.0-beta.67",
+    "@percy/cypress": "^3.1.1"
   }
 }
